# d-vecDB

./: AGENTS.md  BENCHMARKING.md  BENCHMARK_RESULTS_CURRENT.md  Cargo.toml  DEVELOPMENT_STATUS.md  DOCUMENTATION_UPDATES.md  Dockerfile  Dockerfile.build  Dockerfile.dev  FINAL_STATUS.md  INSTALL.md  INSTALLATION.md  LICENSE  MANIFEST.in  PERFORMANCE.md  PERFORMANCE_RESULTS.md  PYPI_PUBLISHING.md  README.md  REALISTIC_STATUS.md  USER_GUIDE.md  build-binaries.sh  build-linux-binary.sh  docker-compose.dev.yml  docker-compose.yml  install-user.sh  install.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: integration-with-sqlite-fts5.md  python-api-improvements.md  roadmap-ivf-pq-indexing.md
.github/workflows/: build-binaries.yml  release.yml  rust.yml
benchmark_results/: system_info.md
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: config.rs  grpc_client.rs  lib.rs  rest_client.rs
common/: Cargo.toml
common/benches/: vector_performance.rs
common/src/: lib.rs  simd.rs  types.rs
d-vecdb-server/: Cargo.toml  README.md
d-vecdb-server-python/: CHANGELOG.md  MANIFEST.in  README.md  example_usage.py  pyproject.toml  setup.py  test_complete_package.py
d-vecdb-server-python/d_vecdb_server/: __init__.py  cli.py  server.py
d-vecdb-server-python/d_vecdb_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
d-vecdb-server-python/d_vecdb_server/binaries/: vectordb-server
docs/: BENCHMARKING.md  DOCUMENTATION_UPDATES.md  FINAL_STATUS.md  REALISTIC_STATUS.md
homebrew/: d-vecdb-bin.rb  d-vecdb.rb
index/src/: hnsw.rs  lib.rs
pocketvec-sqlite/: .gitignore  CLAUDE.md  Cargo.toml  makefile
pocketvec-sqlite/python/: demo.py
pocketvec-sqlite/src/: cosine.rs  lib.rs  utils.rs  vtab.rs
pocketvec-sqlite/tests/: smoke.sql  test.py
proto/: Cargo.toml  build.rs
proto/proto/: vectordb.proto
proto/src/: lib.rs
python-client/: README.md  pytest.ini  requirements.txt  setup.py
python-client/d_vecdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level 2.txt
python-client/tests/: README.md  README_updated.md  __init__.py  conftest.py  conftest_with_embedded_server.py  test_async_client.py  test_example_with_server_utils.py  test_integration.py  test_performance.py  test_sync_client.py  test_types.py
python-client/vectordb_client/: __init__.py  async_client.py  client.py  exceptions.py  types.py
python-client/vectordb_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python-client/vectordb_client/examples/: async_usage.py  basic_usage.py  google_colab_example.ipynb  numpy_integration.py
python-client/vectordb_client/grpc/: __init__.py  client.py
python-client/vectordb_client/rest/: __init__.py  async_client.py  client.py
scripts/: build-server.sh  compare_baseline.sh  generate_datasets.sh  install.sh  publish-crate.sh  publish-pypi.sh  publish-python-server.sh  run_benchmarks.sh  setup-homebrew.sh
server/: Cargo.toml
server/src/: config.rs  grpc.rs  metrics.rs  rest.rs
storage/: Cargo.toml
storage/src/: lib.rs  mmap.rs  recovery.rs  wal.rs
tests/: python_test.py
vectordb-rs/: .gitignore  Cargo.toml  FINAL_STATUS.md  PERFORMANCE_RESULTS.md  README.md
vectordb-rs/client/src/: grpc_client.rs  lib.rs  rest_client.rs
vectordb-rs/common/src/: distance.rs  error.rs
vectordb-rs/index/: Cargo.toml
vectordb-rs/index/src/: node.rs
vectordb-rs/server/src/: lib.rs  main.rs  rest.rs
vectordb-rs/storage/src/: mmap.rs  wal.rs
vectordb-rs/tests/: integration_test.rs
vectordb-rs/vectorstore/: Cargo.toml
vectordb-rs/vectorstore/src/: lib.rs
vectorstore/: Cargo.toml
vectorstore/src/: lib.rs
