[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d-vecdb"
version = "0.1.1"
authors = [
    {name = "Durai", email = "durai@infinidatum.com"},
]
description = "High-performance vector database written in Rust with Python client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["vector database", "similarity search", "machine learning", "embeddings", "HNSW", "rust"]
dependencies = [
    "httpx>=0.24.0",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=4.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/rdmurugan/d-vecDB"
Documentation = "https://github.com/rdmurugan/d-vecDB#readme"
Repository = "https://github.com/rdmurugan/d-vecDB"
"Bug Reports" = "https://github.com/rdmurugan/d-vecDB/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
]
examples = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.1.0",
    "pandas>=1.4.0",
]
server = [
    "uvicorn>=0.18.0",
    "fastapi>=0.95.0",
]

[project.scripts]
d-vecdb = "vectordb_client.cli:main"

[tool.setuptools.packages.find]
where = ["python-client"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.toml", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true