[package]
name = "vectordb-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vectordb-cli"
path = "src/main.rs"

[dependencies]
vectordb-common = { path = "../common" }
vectordb-client = { path = "../client" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tabled = "0.15"
indicatif = "0.17"
colored = "2.0"