[build-system]
requires = ["setuptools>=64", "wheel", "requests>=2.25.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d-vecdb-server"
version = "0.1.3"
authors = [
    {name = "Durai", email = "durai@infinidatum.com"},
]
description = "Complete d-vecDB server package with embedded binaries - zero configuration required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["vector database", "similarity search", "machine learning", "embeddings", "rust"]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
client = [
    "d-vecdb",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "isort>=5.0.0",
]

[project.scripts]
d-vecdb-server = "d_vecdb_server.cli:main"
vectordb-server = "d_vecdb_server.cli:main"

[project.urls]
Homepage = "https://github.com/rdmurugan/d-vecDB"
"Bug Reports" = "https://github.com/rdmurugan/d-vecDB/issues"
Source = "https://github.com/rdmurugan/d-vecDB"
Documentation = "https://github.com/rdmurugan/d-vecDB#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["d_vecdb_server*"]

[tool.setuptools.package-data]
d_vecdb_server = ["binaries/*"]