[package]
name = "d-vecdb-server"
version = "0.1.1"
edition = "2021"
authors = ["Durai <durai@infinidatum.com>"]
description = "High-performance vector database server written in Rust"
homepage = "https://github.com/rdmurugan/d-vecDB"
repository = "https://github.com/rdmurugan/d-vecDB"
documentation = "https://github.com/rdmurugan/d-vecDB#readme"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vector", "database", "similarity-search", "machine-learning", "embeddings"]
categories = ["database", "data-structures", "science"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "benchmarks/",
    "docs/",
    "examples/",
    "tests/",
]

[[bin]]
name = "vectordb-server"
path = "src/server/main.rs"

[[bin]]
name = "vectordb-cli" 
path = "src/cli/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Networking and APIs
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Storage and persistence
memmap2 = "0.9"
parking_lot = "0.12"

# Math and SIMD
nalgebra = "0.32"
simdeez = { version = "2.0.0-dev5" }
half = "2.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]