[workspace]
members = [
    "vectorstore",
    "index", 
    "server",
    "storage",
    "client",
    "proto",
    "common",
    "cli"
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Networking
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Storage and persistence
memmap2 = "0.9"
parking_lot = "0.12"

# Math and SIMD
nalgebra = "0.32"
simdeez = { version = "2.0.0-dev5" }
half = "2.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
async-trait = "0.1"

# Development
criterion = { version = "0.5", features = ["html_reports"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true