[package]
name = "vectordb-index"
version = "0.1.0"
edition = "2021"

[dependencies]
vectordb-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rand = "0.8"